# rbe474x_p3

./: .gitignore  main_notebook.ipynb  pyproject.toml
report/: report.aux  report.tex
src/: patch_augment.py  test.py  train.py  turing.sh  video_inference.py
src/Dst/checkpoints/result/: epoch_0_patch.npy  epoch_199_mask.npy  epoch_199_patch.npy  epoch_1_patch.npy  epoch_2_patch.npy  epoch_3_patch.npy  epoch_4_patch.npy  epoch_5_patch.npy  epoch_779_patch.npy  epoch_929_patch.npy  epoch_970_patch.npy  viz.ipynb
src/Src/list/: test_list.txt
src/models/: adversarial_models.py
src/utils/: dataloader.py  utils.py
