[tool.poetry]
name = "rbe474x-p3"
version = "0.1.0"
description = ""
authors = ["felixng <ngthinh302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
tdqm = "^0.0.1"
opencv-python = "^4.10.0.84"
torchvision = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
